alignments corrected

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@
   outline: none;
   width: 134px;
   height: 43px;
+  margin-left: -40%;
+  margin-top: 2%;
   background: #657991 !important;
   box-shadow: 0px 5px 10.4473px rgba(0, 0, 0, 0.1) !important;
   border-radius: 21.5px !important;
@@ -126,4 +128,13 @@
   text-align: left;
   color: #000000;
   margin-bottom: 2%;
+}
+
+.right-card-text {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16.3686px;
+  line-height: 25px;
+  color: white;
 }
